--- a/litemall-core/src/main/resources/application-core.yml
+++ b/litemall-core/src/main/resources/application-core.yml
@@ -1,8 +1,10 @@
 litemall:
   # 开发者应该设置成自己的wx相关信息
   wx:
-    app-id: wxa5b486c6b918ecfb
-    app-secret: e04004829d4c383b4db7769d88dfbca1
+#    app-id: wxa5b486c6b918ecfb
+#    app-secret: e04004829d4c383b4db7769d88dfbca1
+    app-id: wx52094b401e3f54a3
+    app-secret: f0e3ddda02841ea6783fd6ead30b48f5
     mch-id: 111111
     mch-key: xxxxxx
     notify-url: http://www.example.com/wx/order/pay-notify
@@ -92,6 +94,7 @@ litemall:
       storagePath: storage
       # 这个地方应该是wx模块的WxStorageController的fetch方法对应的地址
       address: http://localhost:8080/wx/storage/fetch/
+#      address:  http://192.168.0.102:8080/wx/storage/fetch/
     # 阿里云对象存储配置信息
     aliyun:
       endpoint: oss-cn-shenzhen.aliyuncs.com
