--- a/deploy/litemall/application.yml
+++ b/deploy/litemall/application.yml
@@ -37,11 +37,11 @@ pagehelper:
 litemall:
   # 开发者应该设置成自己的wx相关信息
   wx:
-    app-id: wxa5b486c6b918ecfb
-    app-secret: e04004829d4c383b4db7769d88dfbca1
+    app-id: wx001aff2f77c9c18c
+    app-secret: bebfdac878e9dc3e22bc87dac55d96a6
     mch-id: 111111
     mch-key: xxxxxx
-    notify-url: http://122.51.199.160:8080/wx/order/pay-notify
+    notify-url: http://119.29.191.178:8080/wx/order/pay-notify
     # 商户证书文件路径
     # 请参考“商户证书”一节 https://pay.weixin.qq.com/wiki/doc/api/wxa/wxa_api.php?chapter=4_3
     key-path: xxxxx
@@ -119,11 +119,11 @@ litemall:
   # 对象存储配置
   storage:
     # 当前工作的对象存储模式，分别是local、aliyun、tencent
-    active: local
+    active: tencent
     # 本地对象存储配置信息
     local:
       storagePath: storage
-      address: http://122.51.199.160:8080/wx/storage/fetch/
+      address: http://119.29.191.178:8080/wx/storage/fetch/
     # 阿里云对象存储配置信息
     aliyun:
       endpoint: oss-cn-shenzhen.aliyuncs.com
@@ -133,10 +133,10 @@ litemall:
     # 腾讯对象存储配置信息
     # 请参考 https://cloud.tencent.com/document/product/436/6249
     tencent:
-      secretId: 111111
-      secretKey: xxxxxx
-      region: xxxxxx
-      bucketName: xxxxxx
+      secret-id: AKIDhHrV0Po8NYbWOBoHblmbP8ljZLzQisGT
+      secret-key: FalldjlgS3Vo285veGgv1zLG7qPo00nS
+      region: ap-nanjing
+      bucket-name: laberking-1306666341
     # 七牛云对象存储配置信息
     qiniu:
       endpoint: http://pd5cb6ulu.bkt.clouddn.com
