--- a/litemall-wx/project.config.json
+++ b/litemall-wx/project.config.json
@@ -37,7 +37,7 @@
   },
   "compileType": "miniprogram",
   "libVersion": "2.4.0",
-  "appid": "wx001aff2f77c9c18c",
+  "appid": "wx52094b401e3f54a3",
   "projectname": "litemall-wx",
   "simulatorType": "wechat",
   "simulatorPluginLibVersion": {},
